--- a/accounting-reporting/src/RevenueDetailsSubreport.jrxml
+++ b/accounting-reporting/src/RevenueDetailsSubreport.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="RevenueDetailsSubreport" pageWidth="802" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="RevenueDetailsSubreport" pageWidth="802" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="ec185c99-6e68-4f72-b87c-1ed4e5adc415">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -28,69 +28,48 @@
 	<field name="clientName" class="java.lang.String">
 		<fieldDescription><![CDATA[clientName]]></fieldDescription>
 	</field>
-	<background>
-		<band splitType="Stretch"/>
-	</background>
-	<title>
-		<band splitType="Stretch"/>
-	</title>
-	<pageHeader>
-		<band splitType="Stretch"/>
-	</pageHeader>
-	<columnHeader>
-		<band splitType="Stretch"/>
-	</columnHeader>
 	<detail>
-		<band height="25" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="544" y="0" width="58" height="20"/>
+				<reportElement uuid="0ec0ed54-7a8e-4d57-8945-c886c0497ab4" style="INVOICE_TX_10" x="525" y="0" width="35" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{taxRate}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{taxRate}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="444" y="0" width="100" height="20"/>
+				<reportElement uuid="7fc7278d-b05e-4c22-a648-b1be4d5ffe73" style="INVOICE_TX_10" x="425" y="0" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{netPrice}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{netPrice}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="602" y="0" width="100" height="20"/>
+				<reportElement uuid="6f8d6f1f-b59c-410f-a5d8-a3b26020a5a9" style="INVOICE_TX_10" x="560" y="0" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{taxAmount}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{taxAmount}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="702" y="0" width="100" height="20"/>
+				<reportElement uuid="ed6403fd-f65e-44d8-973d-b914470fc8f3" style="INVOICE_TX_10" x="660" y="0" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{grossPrice}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{grossPrice}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="0" y="0" width="100" height="20"/>
+				<reportElement uuid="69bf6528-5029-4cc5-9785-02ff8c9c34ea" style="INVOICE_TX_10" x="0" y="0" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceNumber}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{invoiceNumber}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="344" y="0" width="100" height="20"/>
+				<reportElement uuid="d2f38614-f267-4579-8e85-9ff2097acd3e" style="INVOICE_TX_10" x="325" y="0" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{paymentDate}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{paymentDate}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="100" y="0" width="120" height="20"/>
+				<reportElement uuid="f09fc7ef-8edb-4266-93ea-bab48d32a864" style="INVOICE_TX_10" x="100" y="0" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceDate}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{invoiceDate}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12" x="220" y="0" width="124" height="20"/>
+				<reportElement uuid="e6b159fb-3aa4-4a83-81c9-def586966368" style="INVOICE_TX_10" x="200" y="0" width="125" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{clientName}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{clientName}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band splitType="Stretch"/>
-	</pageFooter>
-	<summary>
-		<band splitType="Stretch"/>
-	</summary>
 </jasperReport>
