--- a/accounting-reporting/src/IncomeStatementSubreport.jrxml
+++ b/accounting-reporting/src/IncomeStatementSubreport.jrxml
@@ -18,7 +18,7 @@
 		<fieldDescription><![CDATA[tax]]></fieldDescription>
 	</field>
 	<field name="gross" class="java.lang.String">
-	    <fieldDescription><![CDATA[gross]]></fieldDescription>
+		<fieldDescription><![CDATA[gross]]></fieldDescription>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
@@ -36,30 +36,30 @@
 	</columnHeader>
 	<detail>
 		<band height="20" splitType="Stretch">
-			<textField isStretchWithOverflow="true" pattern="">
-				<reportElement uuid="3af116dc-e4ff-4a64-85ce-4b6066a53876" style="INVOICE_TX_10" positionType="Float" x="309" y="0" width="75" height="20" isPrintWhenDetailOverflows="true"/>
-				<textElement textAlignment="Right">
+			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+				<reportElement uuid="3af116dc-e4ff-4a64-85ce-4b6066a53876" style="INVOICE_TX_10" positionType="Float" x="309" y="0" width="75" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{tax}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="">
-				<reportElement uuid="7a087570-17b9-4375-a6b4-e50331655357" style="INVOICE_TX_10" positionType="Float" x="234" y="0" width="75" height="20" isPrintWhenDetailOverflows="true"/>
-				<textElement textAlignment="Right">
+			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+				<reportElement uuid="7a087570-17b9-4375-a6b4-e50331655357" style="INVOICE_TX_10" positionType="Float" x="234" y="0" width="75" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{net}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement uuid="80a92fa3-7957-485d-9632-33863784f9bb" style="INVOICE_TX_10" positionType="Float" x="125" y="0" width="109" height="20" isPrintWhenDetailOverflows="true"/>
-				<textElement>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="80a92fa3-7957-485d-9632-33863784f9bb" style="INVOICE_TX_10" positionType="Float" x="125" y="0" width="109" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+				<textElement verticalAlignment="Middle">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{category}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement uuid="741e82b4-f8ca-44c8-a4f3-67f95f7701ce" style="INVOICE_TX_10" positionType="Float" x="384" y="0" width="75" height="20" isPrintWhenDetailOverflows="true"/>
-				<textElement textAlignment="Center">
+				<reportElement uuid="741e82b4-f8ca-44c8-a4f3-67f95f7701ce" style="INVOICE_TX_10" positionType="Float" x="384" y="0" width="75" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{gross}]]></textFieldExpression>
