--- a/accounting-reporting/src/IncomeStatementTemplate.jrxml
+++ b/accounting-reporting/src/IncomeStatementTemplate.jrxml
@@ -6,8 +6,6 @@
 	<template><![CDATA["InvoiceStyleSheet.jrtx"]]></template>
 	<field name="incomeStatement" class="de.togginho.accounting.reporting.IncomeStatementWrapper"/>
 	<field name="incomeStatement.title" class="java.lang.String"/>
-	<field name="from.title" class="java.lang.String"/>
-	<field name="until.title" class="java.lang.String"/>
 	<field name="net.title" class="java.lang.String"/>
 	<field name="tax.title" class="java.lang.String"/>
 	<field name="gross.title" class="java.lang.String"/>
@@ -17,6 +15,7 @@
 	<field name="ebitda.title" class="java.lang.String"/>
 	<field name="depreciation.title" class="java.lang.String"/>
 	<field name="ebit.title" class="java.lang.String"/>
+	<field name="capex.title" class="java.lang.String"/>
 	<title>
 		<band height="55" splitType="Stretch">
 			<textField>
@@ -24,27 +23,14 @@
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{incomeStatement.title}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929" x="0" y="54" width="459" height="1"/>
-			</line>
 			<textField>
-				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="0" y="32" width="40" height="20"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{from.title}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="40" y="32" width="70" height="20"/>
-				<textElement textAlignment="Right"/>
+				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="0" y="32" width="75" height="20"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{incomeStatement}.getFrom()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="110" y="32" width="40" height="20"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{until.title}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="150" y="32" width="70" height="20"/>
-				<textElement textAlignment="Right"/>
+				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="75" y="32" width="75" height="20"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{incomeStatement}.getUntil()]]></textFieldExpression>
 			</textField>
 		</band>
@@ -124,110 +110,142 @@
 				<subreportExpression><![CDATA["IncomeStatementSubreport.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
-		<band height="42" splitType="Stretch">
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="e53848f5-a745-407b-b58a-3c8830d830e8" style="INVOICE_TX_10B" x="0" y="1" width="234" height="20"/>
-				<textElement textAlignment="Left" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{otherExpenses.title}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="89298149-8152-47ae-84be-4ef44bc197b4" style="INVOICE_TX_10B" x="234" y="1" width="75" height="20"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{incomeStatement}.getOtherExpensesNet()]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_10B" x="309" y="1" width="75" height="20"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{incomeStatement}.getOtherExpensesTax()]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_10B" x="384" y="1" width="75" height="20"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{incomeStatement}.getOtherExpensesGross()]]></textFieldExpression>
-			</textField>
-			<subreport>
-				<reportElement uuid="2be2af1b-b289-4e10-a748-7bb78687ed8e" x="0" y="21" width="459" height="20" isRemoveLineWhenBlank="true"/>
-				<dataSourceExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}.get("OTHER_EXPENSES_DETAILS")]]></dataSourceExpression>
-				<subreportExpression><![CDATA["IncomeStatementSubreport.jasper"]]></subreportExpression>
-			</subreport>
-		</band>
-		<band height="25">
+		<band height="23" splitType="Stretch">
+			<printWhenExpression><![CDATA[$F{ebitda.title} != null]]></printWhenExpression>
 			<line>
 				<reportElement uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929" x="0" y="0" width="459" height="1"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="e53848f5-a745-407b-b58a-3c8830d830e8" style="INVOICE_TX_12B" x="0" y="2" width="234" height="20"/>
+				<reportElement uuid="e53848f5-a745-407b-b58a-3c8830d830e8" style="INVOICE_TX_12B" x="0" y="1" width="234" height="20"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{ebitda.title}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="89298149-8152-47ae-84be-4ef44bc197b4" style="INVOICE_TX_12B" x="234" y="2" width="75" height="20"/>
+				<reportElement uuid="89298149-8152-47ae-84be-4ef44bc197b4" style="INVOICE_TX_12B" x="234" y="1" width="75" height="20"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{incomeStatement}.getEBITDAnet()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_12B" x="309" y="2" width="75" height="20"/>
+				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_12B" x="309" y="1" width="75" height="20"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{incomeStatement}.getEBITDAtax()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_12B" x="384" y="2" width="75" height="20"/>
+				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_12B" x="384" y="1" width="75" height="20"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{incomeStatement}.getEBITDAgross()]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929" x="0" y="24" width="459" height="1"/>
+				<reportElement uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929" x="0" y="22" width="459" height="1"/>
 			</line>
 		</band>
-		<band height="42">
+		<band height="42" splitType="Stretch">
+			<printWhenExpression><![CDATA[$F{depreciation.title} != null]]></printWhenExpression>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_10B" x="384" y="1" width="75" height="20"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{incomeStatement}.getDepreciationTotal()]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="89298149-8152-47ae-84be-4ef44bc197b4" style="INVOICE_TX_10B" x="234" y="1" width="75" height="20"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{incomeStatement}.getDepreciationTotal()]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="e53848f5-a745-407b-b58a-3c8830d830e8" style="INVOICE_TX_10B" x="0" y="1" width="234" height="20"/>
+				<reportElement uuid="e53848f5-a745-407b-b58a-3c8830d830e8" style="INVOICE_TX_10B" x="0" y="0" width="234" height="20"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{depreciation.title}]]></textFieldExpression>
 			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_10B" x="384" y="0" width="75" height="20"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getDepreciationTotal()]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="89298149-8152-47ae-84be-4ef44bc197b4" style="INVOICE_TX_10B" x="234" y="0" width="75" height="20"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getDepreciationTotal()]]></textFieldExpression>
+			</textField>
 			<subreport>
-				<reportElement uuid="2be2af1b-b289-4e10-a748-7bb78687ed8e" x="0" y="21" width="459" height="20" isRemoveLineWhenBlank="true"/>
+				<reportElement uuid="2be2af1b-b289-4e10-a748-7bb78687ed8e" x="0" y="20" width="459" height="20" isRemoveLineWhenBlank="true"/>
 				<dataSourceExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}.get("DEPRECIATION_DETAILS")]]></dataSourceExpression>
 				<subreportExpression><![CDATA["IncomeStatementSubreport.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
-		<band height="25">
+		<band height="23">
+			<printWhenExpression><![CDATA[$F{ebit.title} != null]]></printWhenExpression>
 			<line>
 				<reportElement uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929" x="0" y="0" width="459" height="1"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="e53848f5-a745-407b-b58a-3c8830d830e8" style="INVOICE_TX_12B" x="0" y="2" width="234" height="20"/>
+				<reportElement uuid="e53848f5-a745-407b-b58a-3c8830d830e8" style="INVOICE_TX_12B" x="0" y="1" width="234" height="20"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{ebit.title}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="89298149-8152-47ae-84be-4ef44bc197b4" style="INVOICE_TX_12B" x="234" y="2" width="75" height="20"/>
+				<reportElement uuid="89298149-8152-47ae-84be-4ef44bc197b4" style="INVOICE_TX_12B" x="234" y="1" width="75" height="20"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{incomeStatement}.getEBITnet()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_12B" x="309" y="2" width="75" height="20"/>
+				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_12B" x="309" y="1" width="75" height="20"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{incomeStatement}.getEBITtax()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_12B" x="384" y="2" width="75" height="20"/>
+				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_12B" x="384" y="1" width="75" height="20"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{incomeStatement}.getEBITgross()]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929" x="0" y="23" width="459" height="1"/>
+				<reportElement uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929" x="0" y="22" width="459" height="1"/>
 			</line>
+		</band>
+		<band height="52" splitType="Stretch">
+			<printWhenExpression><![CDATA[$F{capex.title} != null]]></printWhenExpression>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="b17fd87b-0fb9-437b-afc8-c0db821a7167" style="INVOICE_TX_10B" x="0" y="10" width="234" height="20"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{capex.title}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="89298149-8152-47ae-84be-4ef44bc197b4" style="INVOICE_TX_10B" x="234" y="10" width="75" height="20"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getCapexNet()]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_10B" x="309" y="10" width="75" height="20"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getCapexTax()]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_10B" x="384" y="10" width="75" height="20"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getCapexGross()]]></textFieldExpression>
+			</textField>
+			<subreport>
+				<reportElement uuid="595abc0c-6e9f-4029-9200-fccc6717672b" x="0" y="30" width="459" height="20" isRemoveLineWhenBlank="true"/>
+				<dataSourceExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}.get("CAPEX_DETAILS")]]></dataSourceExpression>
+				<subreportExpression><![CDATA["IncomeStatementSubreport.jasper"]]></subreportExpression>
+			</subreport>
+		</band>
+		<band height="50" splitType="Stretch">
+			<printWhenExpression><![CDATA[$F{otherExpenses.title} != null]]></printWhenExpression>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="e53848f5-a745-407b-b58a-3c8830d830e8" style="INVOICE_TX_10B" x="0" y="10" width="234" height="20"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{otherExpenses.title}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="89298149-8152-47ae-84be-4ef44bc197b4" style="INVOICE_TX_10B" x="234" y="10" width="75" height="20"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getOtherExpensesNet()]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_10B" x="309" y="10" width="75" height="20"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getOtherExpensesTax()]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_10B" x="384" y="10" width="75" height="20"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getOtherExpensesGross()]]></textFieldExpression>
+			</textField>
+			<subreport>
+				<reportElement uuid="2be2af1b-b289-4e10-a748-7bb78687ed8e" x="0" y="30" width="459" height="20" isRemoveLineWhenBlank="true"/>
+				<dataSourceExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}.get("OTHER_EXPENSES_DETAILS")]]></dataSourceExpression>
+				<subreportExpression><![CDATA["IncomeStatementSubreport.jasper"]]></subreportExpression>
+			</subreport>
 		</band>
 	</detail>
 </jasperReport>
