--- a/accounting-reporting/src/IncomeStatementDetailsTemplate.jrxml
+++ b/accounting-reporting/src/IncomeStatementDetailsTemplate.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<template><![CDATA["InvoiceStyleSheet.jrtx"]]></template>
-	<field name="incomeStatement" class="de.togginho.accounting.reporting.IncomeStatementWrapper"/>
+	<field name="incomeStatement" class="de.togginho.accounting.reporting.internal.IncomeStatementWrapper"/>
 	<field name="incomeStatement.title" class="java.lang.String"/>
 	<field name="net.title" class="java.lang.String"/>
 	<field name="tax.title" class="java.lang.String"/>
