--- a/accounting-reporting/src/ExpensesTemplate.jrxml
+++ b/accounting-reporting/src/ExpensesTemplate.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<template><![CDATA["InvoiceStyleSheet.jrtx"]]></template>
+	<template><![CDATA["AccountingStyleSheet.jrtx"]]></template>
 	<field name="expenses" class="de.togginho.accounting.reporting.model.ExpensesWrapper"/>
 	<field name="expenses.title" class="java.lang.String"/>
 	<field name="from.title" class="java.lang.String"/>
@@ -22,38 +22,32 @@
 	<pageHeader>
 		<band height="58" splitType="Stretch">
 			<textField>
-				<reportElement uuid="07aff601-c50a-4a95-ab60-cd31f46d9921" style="INVOICE_TX_18B" x="0" y="0" width="300" height="32"/>
-				<textElement/>
+				<reportElement style="INVOICE_TX_18B" x="0" y="0" width="300" height="32" uuid="07aff601-c50a-4a95-ab60-cd31f46d9921"/>
 				<textFieldExpression><![CDATA[$F{expenses.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="ce08c997-aa43-4995-8847-78f429e76a79" style="INVOICE_TX_10" x="0" y="37" width="40" height="20"/>
-				<textElement/>
+				<reportElement style="INVOICE_TX_10" x="0" y="37" width="40" height="20" uuid="ce08c997-aa43-4995-8847-78f429e76a79"/>
 				<textFieldExpression><![CDATA[$F{from.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b8e15327-83c6-4b14-801d-fc1fb8eb31fd" style="INVOICE_TX_10" x="45" y="37" width="70" height="20"/>
-				<textElement/>
+				<reportElement style="INVOICE_TX_10" x="45" y="37" width="70" height="20" uuid="b8e15327-83c6-4b14-801d-fc1fb8eb31fd"/>
 				<textFieldExpression><![CDATA[$F{expenses}.getFromDate()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="e854a7b6-5a25-4d1c-ac70-99643d7f646c" style="INVOICE_TX_10" x="120" y="37" width="40" height="20"/>
-				<textElement/>
+				<reportElement style="INVOICE_TX_10" x="120" y="37" width="40" height="20" uuid="e854a7b6-5a25-4d1c-ac70-99643d7f646c"/>
 				<textFieldExpression><![CDATA[$F{until.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b1472643-16d1-4b70-a618-d02a76b17d95" style="INVOICE_TX_10" x="165" y="37" width="70" height="20"/>
-				<textElement/>
+				<reportElement style="INVOICE_TX_10" x="165" y="37" width="70" height="20" uuid="b1472643-16d1-4b70-a618-d02a76b17d95"/>
 				<textFieldExpression><![CDATA[$F{expenses}.getUntilDate()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b1472643-16d1-4b70-a618-d02a76b17d95" style="INVOICE_TX_08" x="737" y="0" width="15" height="20"/>
+				<reportElement style="INVOICE_TX_08" x="737" y="0" width="15" height="20" uuid="b1472643-16d1-4b70-a618-d02a76b17d95"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER} + "/"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="b1472643-16d1-4b70-a618-d02a76b17d95" style="INVOICE_TX_08" x="752" y="0" width="10" height="20"/>
-				<textElement/>
+				<reportElement style="INVOICE_TX_08" x="752" y="0" width="10" height="20" uuid="b1472643-16d1-4b70-a618-d02a76b17d95"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -61,52 +55,52 @@
 	<columnHeader>
 		<band height="25" splitType="Stretch">
 			<line>
-				<reportElement uuid="ae5b046e-5504-4983-94ec-3dc19b1cff71" x="0" y="0" width="762" height="1"/>
+				<reportElement x="0" y="0" width="762" height="1" uuid="ae5b046e-5504-4983-94ec-3dc19b1cff71"/>
 			</line>
 			<textField>
-				<reportElement uuid="c52a3fcc-77b6-459a-814f-65dd668ae30d" style="INVOICE_TX_10B" x="0" y="2" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="0" y="2" width="100" height="20" uuid="c52a3fcc-77b6-459a-814f-65dd668ae30d"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{payment.date.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c26da9f2-ed1e-4f3d-834b-d5bd376da8d5" style="INVOICE_TX_10B" x="100" y="2" width="215" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="100" y="2" width="215" height="20" uuid="c26da9f2-ed1e-4f3d-834b-d5bd376da8d5"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{expense.description.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c694f790-df05-42fc-8104-54789353f80f" style="INVOICE_TX_10B" x="425" y="2" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="425" y="2" width="100" height="20" uuid="c694f790-df05-42fc-8104-54789353f80f"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{net.price.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="9e4c876d-06eb-4808-85a1-338805aee207" style="INVOICE_TX_10B" x="525" y="2" width="35" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="525" y="2" width="35" height="20" uuid="9e4c876d-06eb-4808-85a1-338805aee207"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{taxRate.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="acef87f7-ad14-4ef6-9674-e95c3379e680" style="INVOICE_TX_10B" x="560" y="2" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="560" y="2" width="100" height="20" uuid="acef87f7-ad14-4ef6-9674-e95c3379e680"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{tax.amount.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="749c78f7-686c-42dc-8da1-e7d867197ad4" style="INVOICE_TX_10B" x="660" y="2" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="660" y="2" width="100" height="20" uuid="749c78f7-686c-42dc-8da1-e7d867197ad4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{gross.price.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c26da9f2-ed1e-4f3d-834b-d5bd376da8d5" style="INVOICE_TX_10B" x="315" y="2" width="110" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="315" y="2" width="110" height="20" uuid="c26da9f2-ed1e-4f3d-834b-d5bd376da8d5"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{expense.category.title}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="63859de0-3754-4246-b8e7-552cf4d20665" x="0" y="22" width="762" height="3"/>
+				<reportElement x="0" y="22" width="762" height="1" uuid="63859de0-3754-4246-b8e7-552cf4d20665"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="20" splitType="Stretch">
 			<subreport>
-				<reportElement uuid="aa170f25-53ea-4aef-b4de-ed501e1b764a" x="0" y="0" width="802" height="20"/>
+				<reportElement x="0" y="0" width="802" height="20" uuid="aa170f25-53ea-4aef-b4de-ed501e1b764a"/>
 				<dataSourceExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}.get( "EXPENSE_DETAILS_DATASOURCE" )]]></dataSourceExpression>
 				<subreportExpression><![CDATA["ExpenseDetailsSubreport.jasper"]]></subreportExpression>
 			</subreport>
@@ -115,25 +109,24 @@
 	<summary>
 		<band height="40">
 			<line>
-				<reportElement uuid="ae5b046e-5504-4983-94ec-3dc19b1cff71" x="0" y="0" width="762" height="1"/>
+				<reportElement x="0" y="0" width="762" height="1" uuid="ae5b046e-5504-4983-94ec-3dc19b1cff71"/>
 			</line>
 			<textField>
-				<reportElement uuid="751c3233-3d08-4167-8611-ffd45e9e1817" style="INVOICE_TX_12B" x="325" y="1" width="100" height="20"/>
-				<textElement/>
+				<reportElement style="INVOICE_TX_12B" x="325" y="1" width="100" height="20" uuid="751c3233-3d08-4167-8611-ffd45e9e1817"/>
 				<textFieldExpression><![CDATA[$F{sum.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="002205cc-b104-4a18-85c9-59f3a3370374" style="INVOICE_TX_12B" x="425" y="1" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="425" y="1" width="100" height="20" uuid="002205cc-b104-4a18-85c9-59f3a3370374"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{expenses}.getTotalNet()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="94351fdd-1aab-4449-b7c4-6897a78b92a8" style="INVOICE_TX_12B" x="560" y="1" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="560" y="1" width="100" height="20" uuid="94351fdd-1aab-4449-b7c4-6897a78b92a8"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{expenses}.getTotalTaxAmount()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="94351fdd-1aab-4449-b7c4-6897a78b92a8" style="INVOICE_TX_12B" x="660" y="1" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="660" y="1" width="100" height="20" uuid="94351fdd-1aab-4449-b7c4-6897a78b92a8"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{expenses}.getTotalGross()]]></textFieldExpression>
 			</textField>
