--- a/accounting-reporting/src/InvoicePositionTemplate.jrxml
+++ b/accounting-reporting/src/InvoicePositionTemplate.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<template><![CDATA["InvoiceStyleSheet.jrtx"]]></template>
+	<template><![CDATA["AccountingStyleSheet.jrtx"]]></template>
 	<queryString language="xPath">
 		<![CDATA[]]>
 	</queryString>
