--- a/accounting-reporting/src/RevenueTemplate.jrxml
+++ b/accounting-reporting/src/RevenueTemplate.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<template><![CDATA["InvoiceStyleSheet.jrtx"]]></template>
+	<template><![CDATA["AccountingStyleSheet.jrtx"]]></template>
 	<field name="revenue" class="de.togginho.accounting.reporting.model.RevenueWrapper"/>
 	<field name="revenue.title" class="java.lang.String"/>
 	<field name="from.title" class="java.lang.String"/>
